--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/cofish-icon.png" />
+<link rel="apple-touch-icon" href="/cofish-icon.png" />
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cofish-web</title>
