Add robust catch verification with multi-frame analysis, uniqueness checking, and Netlify deployment setup

--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/cofish-icon.png" />
-<link rel="apple-touch-icon" href="/cofish-icon.png" />
-
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cofish-web</title>
+    <link rel="apple-touch-icon" href="/cofish-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
+    
+    <!-- PWA meta tags for mobile -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="theme-color" content="#0f172a" />
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>CoFish - Post Your Catch</title>
   </head>
   <body>
     <div id="root"></div>
