--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#0f172a" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>CoFish - Post Your Catch</title>
+    <title>CoFish - Earn Fish Locations</title>
   </head>
   <body>
     <div id="root"></div>
